debug luckyManage's bug is too more

--- a/shopServer/templates/goodsAdd.html
+++ b/shopServer/templates/goodsAdd.html
@@ -215,12 +215,13 @@
 					<th>促销开始日期</th>
 					<th>促销结束日期</th>
 					<th>返利</th>
+					<th>运费</th>
 				</tr>
 
 				<tbody class="myListTable">
 					<tr class="idatas" style=" background-color: rgb(255, 255, 255);
 						padding-left: 5px;">
-						<td></td>
+						<td style="height:28px"></td>
 						<td></td>
 						<td></td>
 						<td></td>
