--- a/shopServer/templates/activeManage.html
+++ b/shopServer/templates/activeManage.html
@@ -43,14 +43,17 @@
 {% endblock %}
 
 {% block content %}
-
+<button id="deleteBtn" type="button" class="btn btn-danger"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span>批量删除</button>
 <button type="button" class="btn btn-primary addBtn" data-toggle="modal" data-target="#myModal" style="margin:5px;"><span class="glyphicon glyphicon-plus"></span>添加</button>
 <div id="xxx" class=" col-sm-12" style="padding:0;">
-    <a class="col-sm-12" style="margin:5px; padding-left:0; color: black;margin-right:0;"><strong>轮播图列表</strong></a>
+    <a class="col-sm-12" style="margin:5px; padding-left:0; color: black;margin-right:0;"><strong>活动列表</strong></a>
     <table id="table" class="table table-bordered" >
         <thead
             <tr name="row">
                 <td id="item" style="display:none"></td>
+                <th>
+                    <input type="checkbox" id="checkbox-all" value="$(goodsid)">
+                </th>
                 <th>标题</th>
                 <th>开始时间</th>
                 <th>截止日期</th>
@@ -87,7 +90,7 @@
                 <form id="myform" action="" enctype="multipart/form-data" method="post">
                     <div class="form-group">
                         <label class="col-sm-4 control-label">标题:</label>
-                        <input type="text" class="form-control" id="addLucky-goodsId" name="active_name">
+                        <input type="text" class="form-control" id="add_acive_name" name="active_name">
                     </div>
                     <div class="form-group">
                         <label class="col-sm-4 control-label">活动开始日期:</label>
@@ -109,8 +112,8 @@
                         <label for="">添加图片:</label>
                         <input type="file" class="myfile" name="imgs">
                     </div>
-                    <div id="img" class="form-group">
-                        <img src="static/myfile/1.jpg" alt="" id="myimages">
+                    <div id="add_img" class="form-group">
+                        <!-- <img src="#" alt="" id="myimages"> -->
                     </div>
                 </form>
                 
@@ -139,35 +142,49 @@
             </div>
             <div class="modal-body">
                 
-                <form id="myform111"  enctype="multipart/form-data" method="POST" action="http://localhost:8000/activetableManageJsonchange/">
+                <form id="myform111"  enctype="multipart/form-data" method="POST">
                     <div class="form-group">
-                  
                         <label class="col-sm-4 control-label">id:</label>
                         <input type="text" class="form-control"  id="ss" name="activeid" readonly="readonly">
-                    
+                    </div>
+                    <div class="form-group">
+                        <label class="col-sm-4 control-label">标题:</label>
+                        <input type="text" class="form-control" id="updata_active_name" name="active_name">
+                    </div>
+                    <div class="form-group">
+                        <label class="col-sm-4 control-label">活动开始日期:</label>
+                        <input  class="form-control only" type="date" id="updata_prostart" name="starttime">
+                    </div>
+                    <div class="form-group">
+                        <label class="col-sm-4 control-label">活动结束日期:</label>
+                        <input  class="form-control only" type="date" id="updata_proend" name="stoptime">
+                    </div>
+                    <div class="form-group">
+                        <label for="">位置:</label>
+                        <input type="text" class="form-control" name="active_position" id="updata_location">
+                    </div>
+                    <div class="form-group">
+                        <label class="col-sm-4 control-label">活动详情:</label>
+                        <textarea class="form-control" rows="6" style="resize: none;" id="updata_activedetail" name="activedetail"></textarea>  
+                    </div>
+                    <div class="form-group">
                         <label for="">添加图片:</label>
-                        <input type="file" class="myPhone" name='sb' accept="image/gif,image/jpeg">
-                        <div id="img" class="form-group">
-                            <img src="static/myfile/1.jpg" alt="" id="MyPhone">
-                        </div>
+                        <input type="file" class="myPhone" id="up_imgs" name='imgs' accept="image/gif,image/jpeg">
                     </div>
-                    
+                    <div id="up_img" class="form-group">
+                        <!-- <img src="#" alt="" id="MyPhone"> -->
                     </div>
-
-
-                    
                     <div class="modal-footer">
-                            <input type="submit" class="btn btn-primary"  value="提交" />
+                            <!-- <input type="submit" class="btn btn-primary"  value="提交" /> -->
                             <button type="button" class="btn btn-default" data-dismiss="modal">关闭
                             </button>
-                            
-                        
+                            <input type="submit" class="btn btn-primary"  value="提交" data-dismiss="modal" onclick="ajaxSubmitFormUpdata()" />
                     </div>
                     
                 
                 </form>
                
-          
+            </div>
         </div><!-- /.modal-content -->
     </div><!-- /.modal -->
 </div>
@@ -178,14 +195,13 @@
 <script src="{% static 'js/jquery.form.min.js' %}"></script>
 <script type="text/javascript">
 
+var activeArr = []
 
 $('#myform111').on('submit', function(e) {
-        e.preventDefault(); // prevent native submit
+        e.preventDefault(); 
         $(this).ajaxSubmit({  
             success : function(data) 
             {
-                // $("#myModal").hide();
-                // alert("成功添加了一条活动");
                 layer.msg("编辑成功....");
                 history.go(0)
                 
@@ -198,7 +214,7 @@ $('#myform111').on('submit', function(e) {
     var countPages = 0;
 
     //添加item函数
-    function adEleFn(data){
+    function adEleFn(data, i){
         imgs = data.imgs;
         activeid = data.activeid;
         starttime = data.starttime;
@@ -207,7 +223,7 @@ $('#myform111').on('submit', function(e) {
         activetitle = data.activetitle;
         activePosition = data.activePosition;
         activeName = data.activeName;
-        var Tr = '<tr name="row" class="myrow" activeid = "' + activeid + '"><td>' + activeName + '</td><td>' + starttime + '</td><td>' + stoptime + '</td><td>' + activePosition + '</td><td><div id="imagesdiv"><img src="http://localhost:8000/static/myfile/' + imgs + '"/></div></td><td><button class="btn btn-success edit">编 辑</button>  <button class="btn btn-danger delete">删 除</button> </td></tr>';
+        var Tr = '<tr name="row" class="myrow" i="' + i + '" activeid = "' + activeid + '"><td><input class="checkbox-one" type="checkbox"></td><td>' + activeName + '</td><td>' + starttime + '</td><td>' + stoptime + '</td><td>' + activePosition + '</td><td><div id="imagesdiv"><img src="http://localhost:8000/static/myfile/' + imgs + '"/></div></td><td><button class="btn btn-success edit">编 辑</button>  <button class="btn btn-danger delete">删 除</button> </td></tr>';
         $("#myListTable").append(Tr);
     }
     //当modal关闭的时候数据清除
@@ -219,49 +235,104 @@ $('#myform111').on('submit', function(e) {
     });
     $('#Modal').on('hide.bs.modal', function ()
     {
-        $('#myform')[0].reset();
+        $('#myform111')[0].reset();
         //这个方法来清除缓存
         $(this).find("img").remove();
     });
+
     //解析数据函数
-    function parseDataFn(result, currpage){
-        var data = result.data;
+    function parseDataFn(currpage){
+        var data = activeArr;
         var start = (currpage - 1) * 10
         var end = data.length > (currpage * 10)?(currpage * 10):data.length;
-        
-        for (var i = start; i < end; i++){
-            perdata = data[i];
-            adEleFn(perdata);
+        if (data.length > 0) {
+            for (var i = start; i < end; i++){
+                perdata = data[i];
+                adEleFn(perdata, i);
+            }
         }
-        
     }
 
-
-    function ajaxfn() {
-        myPost('activeManageJsonSelect/?',{}, function (result) {
-            adcounts = result.data.length;
-            countPages = Math.ceil(parseInt(adcounts) / 10 );
-            // console.log($("#myListTable").children("tr"))
-			$("#myListTable").children("tr").remove()
-			//解析数据	
-			parseDataFn(result, currpage);
-			//记录个数
-			$("#visible-pages-example").children(".sumdiv").remove()
-			var spanele = '<span class="sumdiv">共' + countPages + '页,当前第' + currpage + '页,共' + adcounts + '条数据</span>'
-			$("#visible-pages-example").append($(spanele))
-			createPageNav('#visible-pages-example' , countPages , function(event , page){
+    function refreshFn() {
+        adcounts = activeArr.length;
+        var adcountsPage = Math.ceil(parseInt(adcounts) / 10 )
+        if (countPages != adcountsPage ) {
+            $("#visible-pages-example").twbsPagination("destroy") //销毁分页栏
+            if (currpage >= adcountsPage) {
+                currpage = adcountsPage
+            }
+        }
+        if (adcounts != null && parseInt(adcounts) > 0) {
+            countPages = adcountsPage;
+        } else {
+            countPages = 1
+            currpage = 1
+        }
+        $("#myListTable").children("tr").remove()
+        //解析数据	
+        parseDataFn(currpage);
+        //记录个数
+        createPageNav('#visible-pages-example' , countPages , function(event , page){
+            if (currpage != page) {
                 currpage = page;
-                ajaxfn();
-            });
-			// addFenyeHtml(goodsListPages)
-	});
-}
+                refreshFn();
+            }
+        });
+        $("#visible-pages-example").children(".sumdiv").remove()
+        var spanele = '<span class="sumdiv">共' + countPages + '页,当前第' + currpage + '页,共' + adcounts + '条数据</span>'
+        $("#visible-pages-example").append(spanele)
 
-ajaxfn()   
+    }
+    
+    function ajaxfn() {
+        var d = new Date();
+        var prostartStr = d.getFullYear()+"-"+(d.getMonth() + 1)+"-"+(d.getDate());
+        var proendStr = d.getFullYear()+"-"+(d.getMonth() + 1)+"-"+(d.getDate() + 1);
+        $("#prostart").attr("value",prostartStr)
+        $("#proend").attr("value",proendStr)
+        myPost('activeManageJsonSelect/?',{}, function (result) {
+            activeArr = result.data;
+            refreshFn();
+        });
+    }
+
+    ajaxfn()
+
+
+    //编辑按钮提交表单
+    function ajaxSubmitFormUpdata(){
+        aaa=document.getElementById("updata_prostart").value;
+        bbb=document.getElementById("updata_proend").value;
+        var oDate1=new Date(aaa);
+        var oDate2=new Date(bbb)
+        if(oDate1<oDate2){
+            var option = {
+                url : "http://localhost:8000/activetableManageJsonchange/",
+                type : 'POST',
+                success : function(data) 
+                {
+                    for (var i = 0; i < activeArr.length; i++) {
+                        if (data.addactive.activeid == activeArr[i].activeid) {
+                            activeArr[i] = data.addactive
+                        }
+                    }
+                    refreshFn()
+                    layer.msg('修改成功');
+                },
+                error: function(data) {
+                    alert("修改失败");
+                }
+                };
+                $("#myform111").ajaxSubmit(option);
+            }
+        else{
+            layer.msg('结束时间不能早于开始时间');
+        }
+    }
+
     
     //ajaxform提交表单
     function ajaxSubmitForm(){
-        console.log("submigtajax");
         aaa=document.getElementById("prostart").value;
         bbb=document.getElementById("proend").value;
         var oDate1=new Date(aaa);
@@ -272,13 +343,12 @@ ajaxfn()
                 type : 'POST',
                 success : function(data) 
                 {
-                    // $("#myModal").hide();
+                    activeArr.unshift(data.addactive)
+                    refreshFn()
                     layer.msg('添加成功');
-                    // alert("成功添加一条活动");
                 },
                 error: function(data) {
-                    alert("企业用户升级失败,请联系管理员！");
-                    console.log(data)
+                    alert("添加失败");
                 }
                 };
                 $("#myform").ajaxSubmit(option);
@@ -286,27 +356,11 @@ ajaxfn()
         else{
             layer.msg('结束时间不能早于开始时间');
         }
-        // console.log(aaa)
-        // console.log("333333333")
-        // console.log(bbb)
-        // var option = {
-        //     url : "http://localhost:8000/activetableManageJsonAdd/",
-        //     type : 'POST',
-        //     success : function(data) 
-        //     {
-        //         // $("#myModal").hide();
-        //         layer.msg('添加成功');
-        //         // alert("成功添加一条活动");
-        //     },
-        //     error: function(data) {
-        //         alert("企业用户升级失败,请联系管理员！");
-        //         console.log(data)
-        //     }
-        // };
-        // $("#myform").ajaxSubmit(option);
     }
     //图片预览
     $(".myfile").change(function() {
+        var ele = '<img src="#" alt="" id="myimages">'
+        $("#add_img").append(ele)
         var $file = $(this);
         //获得文件内容和信息
         var fileObj = $file[0];
@@ -340,37 +394,91 @@ ajaxfn()
                 $("#Modal").modal("show");
                 var that = $(this).parents("tr")
                 var activeid=that.attr("activeid")
-                document.getElementById("ss").value = activeid;     
+                document.getElementById("ss").value = activeid;
+                
+                var i = parseInt(that.attr("i"))
+                var activeName=activeArr[i].activeName;
+                var starttime=activeArr[i].starttime.split(" ")[0]
+                var stoptime=activeArr[i].stoptime.split(" ")[0]
+                var position=activeArr[i].activePosition
+                var updata_activedetail = activeArr[i].activedetail
+                var activeImgs=activeArr[i].imgs
+
+                $("#updata_active_name").val(activeName)
+                $("#updata_prostart").val(starttime)
+                $("#updata_proend").val(stoptime)
+                $("#updata_location").val(position)
+                $("#updata_activedetail").val(updata_activedetail)
+                // $("#up_imgs").attr("value",activeImgs)
+                var ele = '<img src="#" alt="" id="MyPhone">'
+                $("#up_img").append(ele)
+                $("#MyPhone").attr("src","http://localhost:8000/static/myfile/"+ activeImgs)
+
             }
             if($(this).html() == "删 除"){
-                console.log("hahhah");
-                
                 var that = $(this).parents("tr")
                 var dataId=that.attr("activeid")
                 
-              
-                console.log(dataId);
                 $.ajax({
                     
                     url: "http://localhost:8000/activetableManageJsonDelete/?dataId="+dataId,
                     
-
                     success: function (result){
                         if (result.status == "ok"){
-                            console.log("shangchuchengg");
-                            $(that).parents().remove();
-                            history.go(0)
+                            for (var i = 0; i < activeArr.length; i++) {
+                                if (activeArr[i].activeid == dataId) {
+                                    activeArr.splice(i,1);
+                                }
+                            }
+                            refreshFn();
                             layer.msg("删除成功")
                         }
                     },
                     error: function (err){
-                        console.log("请求失败");
-                        console.log(err);
+                        layer.msg("删除失败");
                     }
                 });
             }
         });
     });
+
+
+$('#checkbox-all').click(function () {
+    if($('#checkbox-all').is(':checked')) {
+        $(".checkbox-one").prop("checked",true);
+    }else{
+        $(".checkbox-one").prop("checked",false);
+    }
+});
+
+
+$('#deleteBtn').click(function () {
+	var activeidArr = []
+	var checkboxs = $('.checkbox-one')
+	for (var i = 0; i < checkboxs.length; i++) {
+		if($(checkboxs[i]).is(':checked')) {
+			var activeidOne = $(checkboxs[i]).parents("tr").attr("activeid")
+			activeidArr.push(activeidOne)
+		}
+	}
+    myPostGoodsManage("activesManageJsonDelete" , {activeids:activeidArr} , function (data) {
+        if (data["status"] == "ok") {
+            var deleteCount = data['deleteCount']
+            for (var i = 0; i < activeArr.length; i++) {
+                for (var j = 0; j <activeidArr.length; j++) {
+                    if (activeArr[i].activeid == activeidArr[j]) {
+                        activeArr.splice(i,1);
+                    }
+                }
+            }
+            refreshFn();
+            layer.msg("删除" + deleteCount + "条记录成功");
+        } else {
+            layer.msg("删除失败")
+        }
+    });
+});
+
 
 
 </script>
