--- a/shopServer/templates/base.html
+++ b/shopServer/templates/base.html
@@ -349,7 +349,7 @@
 								</li>
 								
 								<li >
-									<a href="/settings/"><i class="fa fa-flag"></i> 店铺消费记录</a>
+									<a href="#"><i class="fa fa-flag"></i> 店铺消费记录</a>
 								</li>
 							</ul>
 						</li>
